--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -1,23 +1,33 @@
 .db-page--about-us {
   .db-section--about-us {
-    padding-bottom: 134px;
+    padding-bottom: 100px;
+    // padding-bottom: 134px;
+    @media only screen and (max-width: 1080px) {
+      padding-bottom: 134px;
+    }
 
     @media only screen and (max-width: 480px) {
       padding-bottom: 10px;
       background: #0D0713;
     }
+
     &::before {
       content: "";
       position: absolute;
       top: 0;
       left: 0;
       right: 0;
-      bottom: 0;
+      height: 1488px;
+      // bottom:0;
       display: block;
       background-image: url('About-Us__asset-3800x2916.png');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      @media only screen and (max-width: 1080px) {
+        height: unset;
+        bottom:0;
+      }
 
       @media only screen and (max-width: 480px) {
         top: 0;
@@ -29,6 +39,21 @@
         background-repeat: no-repeat;
         background-size: cover;
         height: 728px;
+      }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom:0;
+      left: 0;
+      right: 0;
+      background: linear-gradient(180deg, #0D0616 0%, #150E1F 100%);
+      height: 1145px;
+      display: block;
+
+      @media only screen and (max-width: 1080px) {
+        display: none;
       }
     }
 
@@ -396,6 +421,205 @@
         }
       }
     }
+
+    .about-us--elevate {
+      padding-top: unset;
+      position: relative;
+      z-index: 3;
+      padding-top: 134px;
+
+      @media only screen and (max-width: 1080px) {
+        display: none;
+      }
+
+      @media only screen and (max-width: 480px) {
+        padding: 79px 33px 61px 24px;
+      }
+
+      .db-container {
+        .db-row {
+          column-gap: 176px;
+
+          @media only screen and (max-width: 1080px) {
+            flex-direction: column;
+            row-gap: 100px;
+          }
+
+          @media only screen and (max-width: 768px) {
+            row-gap: 50px;
+          }
+
+          @media only screen and (max-width: 480px) {
+            row-gap: 41px;
+          }
+
+          &:nth-child(1) {
+            .db-col {
+              &:nth-child(1) {
+                max-width: 388px;
+                padding-top: 50px;
+
+                @media only screen and (max-width: 480px) {
+                  padding-top: unset;
+                  padding-left: 20px;
+                }
+
+                h4 {
+                  color: $whiteColor;
+                  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                  font-family: $primaryFontFamily;
+                  font-size: 48px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 1.1em;
+
+                  @media only screen and (max-width: 480px) {
+                    font-size: 40px;
+                  }
+                }
+
+                h3 {
+                  color: #A120D2;
+                  font-family: $primaryFontFamily;
+                  font-size: 56px;
+                  font-style: normal;
+                  font-weight: 700;
+                  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                  line-height: 1.1em;
+                  letter-spacing: -2.24px;
+
+                  @media only screen and (max-width: 480px) {
+                    font-size: 50px;
+                  }
+                }
+              }
+
+              &:nth-child(2) {
+                max-width: 840px;
+
+                
+                @media only screen and (max-width: 1080px) {
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  align-self: center;
+                }
+
+                @media only screen and (max-width: 480px) {
+                  align-items: flex-start;
+                  align-self: flex-start;
+                }
+
+                .db-image-container {
+                  max-width: 408px;
+                  width: 100%;
+
+                  @media only screen and (max-width: 768px) {
+                    max-width: 350px;
+                  }
+
+                  @media only screen and (max-width: 480px) {
+                    max-width: 322px;
+                  }
+                  img {
+                    display: block;
+                    object-fit: cover;
+                    width: 100%;
+                  }
+                }
+
+                .db-elevate-description {
+                  margin-top: 40px;
+
+                  @media only screen and (max-width: 480px) {
+                    max-width: 373px;
+                  }
+                  p {
+                    color: #CAC7D0;
+                    font-family: $primaryFontFamily;
+                    font-size: 36px;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 1.3em;
+
+                    @media only screen and (max-width: 768px) {
+                      font-size: 30px;
+                    }
+
+                    @media only screen and (max-width: 480px) {
+                      font-size: 24px;
+                    }
+                  }
+                }
+                
+                .db-elevate-connect-with-us {
+                  margin-top: 90px;
+
+                  @media only screen and (max-width: 1080px) {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                  }
+
+                  @media only screen and (max-width: 480px) {
+                    margin-top: 65px;
+                    width: 100%;
+                  }
+
+                  .connect-with-us {
+                    color: #CAC7D0;
+                    font-family: $secondaryFontFamily;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.5em;
+
+                    @media only screen and (max-width: 480px) {
+                      font-size: 16px;
+                      text-align: center;
+                    }
+                  }
+                  .db-elevate-website {
+                    display: inline-flex;
+                    align-items: center;
+                    column-gap: 10px;
+                    margin-top: 32px;
+                    padding: 16px 30px;
+                    border-radius: 5px;
+                    border: 1.5px solid #AA27B1;
+
+                    @media only screen and (max-width: 480px) {
+                      margin-top: 10px;
+                      width: 100%;
+                      justify-content: center;
+                    }
+                    
+                    span {
+                      color: #A120D2;
+                      font-family: $primaryFontFamily;
+                      font-size: 13px;
+                      font-style: normal;
+                      font-weight: 700;
+                      line-height: 1.1em;
+                    }
+
+                    a {
+                      color: $whiteColor;
+                      font-family: $primaryFontFamily;
+                      font-size: 13px;
+                      font-style: normal;
+                      font-weight: 700;
+                      line-height: 1.1em;
+                    }
+                  }
+                }
+                
+              }
+            }
+          }
+        }
+      }
+    }
   }
 
   .db-section--about-us-elevate {
@@ -403,6 +627,11 @@
     background: linear-gradient(180deg, #0D0616 0%, #150E1F 100%);
     padding-top: unset;
     padding-bottom: 133px;
+    display: none;
+
+    @media only screen and (max-width: 1080px) {
+      display: block;
+    }
 
     @media only screen and (max-width: 480px) {
       padding: 79px 33px 61px 24px;
