--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -1778,7 +1778,7 @@
     padding-bottom: 0;
     background-color: #0D0713;
     padding-top: 256px;
-    padding-bottom: 130px;
+    padding-bottom: 0px;
 
     @media only screen and (max-width: 768px) {
       padding-top: 180px;
@@ -1979,6 +1979,54 @@
               justify-content: flex-end;
             }
 
+            .video-overlay {
+              position: absolute;
+              top:0;
+              bottom:0;
+              left:0;
+              max-width: 671px;
+              height: 810px;
+              z-index: -1;
+
+              @media only screen and (max-width: 1080px) {
+                max-width: 671px;
+                height: auto;
+              }
+
+              @media only screen and (max-width: 768px) {
+                display: none;
+              }
+
+              @media only screen and (max-width: 480px) {
+                display: block;
+              }
+
+              svg {
+                width: 100%;
+                height: 100%;
+
+                &:nth-child(1) {
+                  display: block;
+
+                  @media only screen and (max-width: 768px) {
+                    display: none;
+                  }
+                }
+
+                &:nth-child(2) {
+                  display: none;
+
+                  @media only screen and (max-width: 480px) {
+                    display: block;
+                  }
+                }
+              }
+
+              &.active {
+                z-index: 3;
+              }
+            }
+
             html:-ms-fullscreen {
               max-width: 100vw;
             }
@@ -1997,6 +2045,10 @@
               @media only screen and (max-width: 1440px) {
                 row-gap: unset;
                 justify-content: space-between;
+              }
+
+              .video-overlay {
+                display: none;
               }
 
               figure {
@@ -2068,7 +2120,7 @@
 
             .play-button {
               position: absolute;
-              z-index: 2;
+              z-index: 3;
               top: 50%;
               left: 50%;
               transform: translate(-50%, -100%);
@@ -2103,7 +2155,7 @@
 
             .button-container {
               position: absolute;
-              z-index: 2;
+              z-index: 3;
               right: 74px;
               top:37px;
               display: flex;
@@ -2239,7 +2291,7 @@
               max-width: 442px;
               width: 100%;
               position: relative;
-              z-index: 2;
+              z-index: 3;
               margin-top: 271px;
               opacity: 1;
               transition: opacity 600ms ease-in-out 0ms;
@@ -2444,8 +2496,8 @@
     .the-game {
       position: relative;
       z-index: 2;
-      padding-top: 218px;
-      background-color: #0D0713;
+      padding-top: 222px;
+      padding-bottom: 213px;
 
       @media only screen and (max-width: 480px) {
         padding-top: 20px;
@@ -2458,6 +2510,36 @@
       // @media only screen and (max-width: 480px) {
       //   background:#0F061B;
       //   padding-bottom: 19px;
+      // }
+
+      // &::before {
+      //   content: "";
+      //   position: absolute;
+      //   left: 0;
+      //   bottom: 0;
+      //   right: 0;
+      //   top:0;
+      //   display: block;
+      //   background: url('Explore-OC__asset-v15-6908x4060.png');
+      //   background-repeat: no-repeat;
+      //   background-position: left;
+      //   background-size: cover;
+      // }
+
+      // &::after {
+      //   content: "";
+      //   position: absolute;
+      //   left: 50%;
+      //   top:50%;
+      //   display: block;
+      //   background: url('Explore-OC__asset-v16-2648x3152.png');
+      //   background-repeat: no-repeat;
+      //   background-position: center;
+      //   background-size: cover;
+      //   max-width: 662px;
+      //   width: 100%;
+      //   height: 788px;
+      //   transform: translate(-50%, -50%);
       // }
       
       &::before {
@@ -2518,6 +2600,7 @@
         max-width: 1393px;
 
         .db-row {
+          // justify-content: flex-end;
           column-gap: 238px;
 
           @media only screen and (max-width: 1440px) {
@@ -2677,11 +2760,12 @@
                         .db-description {
                           color: #EFEFEF;
                           font-family: $secondaryFontFamily;
-                          font-size: 20px;
+                          font-size: 30px;
                           font-style: normal;
                           font-weight: 400;
                           line-height: 130%;
                           margin-top: 8px;
+                          
 
                           @media only screen and (max-width: 480px) {
                             font-size: 9px;
@@ -2696,11 +2780,23 @@
                 }
               }
 
+              // &:nth-child(1) {
+              //   max-width: 662px;
+              //   width: 100%;
+              //   height: 788px;
+              //   background: url('Explore-OC__asset-v16-2648x3152.png');
+              //   background-repeat: no-repeat;
+              //   background-position: center;
+              //   background-size: cover;
+              //   position: relative;
+              // }
+
               &:nth-child(2) {
                 max-width: 493px;
                 // min-width: 493px;
                 width: 100%;
                 padding-top: 5px;
+                position: relative;
 
                 // @media only screen and (max-width: 768px) {
                 //   align-self: center;
@@ -3283,15 +3379,46 @@
         width: 100%;
         height: 100%;
 
+        .db-image-container {
+          max-width: 286px;
+          width: 100%;
+          height: 184px;
+          display: block;
+
+          @media only screen and (max-width: 1080px) {
+            max-width: 200px;
+            height: 100px;
+          }
+
+          @media only screen and (max-width: 480px) {
+            align-self: center;
+            max-width: 100px;
+            height: 50px;
+          }
+
+
+          img {
+            object-fit: cover;
+            width: 100%;
+            display: block;
+            height: 100%;
+
+            @media only screen and (max-width: 1080px) {
+              object-fit: contain;
+            }
+          }
+        }
+
         .radio-link {
-          color: #A120D2;
+          color: #FFF;
           font-family: $primaryFontFamily;
           font-size: 80px;
           font-style: normal;
           font-weight: 700;
           text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
-          line-height: 1em;
-          letter-spacing: -3.2px;
+          line-height: 115%;
+          letter-spacing: -2.4px;
+          text-decoration: underline;
 
           @media only screen and (max-width: 768px) {
             font-size: 60px;
@@ -3372,39 +3499,91 @@
       padding-top: 30px;
     }
 
-    &::before {
-        content:"";
-        position: absolute;
+    .db-factions-image-container {
+      position: absolute;
+      height: 966px;
+      max-width: 707px;
+      width: 100%;
+      top:50%;
+      z-index: 1;
+      left: 50%;
+      transform: translateX(-53%) translateY(-50%);
+
+      @media only screen and (max-width: 1080px) {
+        top:40%;
+      }
+      @media only screen and (max-width: 768px) {
+        display: none;
+      }
+
+      @media only screen and (max-width: 480px) {
         display: block;
-        height: 966px;
-        max-width: 707px;
+        max-width: 377px;
+        transform: translateX(-50%);
         width: 100%;
-        background-image: url('Explore-OC__asset-v08-2305x2236.png');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        top:50%;
-        z-index: 1;
-        left: 50%;
-        transform: translateX(-53%) translateY(-50%);
+        top:10%;
+        height: 638px;
+      }
 
-        @media only screen and (max-width: 1080px) {
-          top:40%;
-        }
-        @media only screen and (max-width: 768px) {
-          // display: none;
+      img {
+        position: absolute;
+        left:50%;
+        transform: translateX(-50%);
+        display: block;
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: opacity 600ms ease-in-out 0ms;
+
+        &.active {
+          opacity: 1;
         }
 
-        @media only screen and (max-width: 480px) {
-          display: block;
-          // background-image: url('About-Us__asset-faction-mb-bg-v01-860x1182.png');
-          max-width: 377px;
-          transform: translateX(-50%);
-          width: 100%;
-          top:10%;
-          height: 638px;
+        &.next {
+          opacity: 0;
         }
+
+        &.last {
+          opacity: 0;
+        }
+      }
     }
+
+    // &::before {
+    //     content:"";
+    //     position: absolute;
+    //     display: block;
+    //     height: 966px;
+    //     max-width: 707px;
+    //     width: 100%;
+    //     background-image: url('Explore-OC__asset-v14-2494x594.png');
+    //     background-repeat: no-repeat;
+    //     background-position: center;
+    //     background-size: contain;
+      
+    //     top:50%;
+    //     z-index: 1;
+    //     left: 50%;
+    //     transform: translateX(-53%) translateY(-50%);
+
+    //     @media only screen and (max-width: 1080px) {
+    //       top:40%;
+    //     }
+    //     @media only screen and (max-width: 768px) {
+    //       // display: none;
+    //     }
+
+    //     @media only screen and (max-width: 480px) {
+    //       display: block;
+    //       // background-image: url('About-Us__asset-faction-mb-bg-v01-860x1182.png');
+    //       max-width: 377px;
+    //       transform: translateX(-50%);
+    //       width: 100%;
+    //       top:10%;
+    //       height: 638px;
+    //     }
+    // }
 
     .db-container {
       max-width: 1336px;
