make small changes

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -100,7 +100,7 @@
           <div class="db-inner-row">
             <a class="db-elevate-link"
               title="Elevate Taleng Group"
-              href="https://elevatetalent.group/"
+              href="https://www.elevatepictures.com/"
               target="_blank">
               <img class="db-elevate-logo db-img"
                 alt=""
