--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -1880,11 +1880,15 @@
               line-height: 100%; /* 88px */
               letter-spacing: -0.52px;
               display: flex;
-              column-gap: 10px;
+              column-gap: 25px;
               justify-content: center;
 
+              @media only screen and (max-width: 1080px) {
+                column-gap: 10px;
+              }
+
               @media only screen and (max-width: 768px) {
-                font-size: 60px;
+                font-size: 50px;
               }
 
               @media only screen and (max-width: 480px) {
